Complete upgrade plan: Manifest V3 migration, testing framework, and improvements
- ✅ Phase 1: Replace deprecated APIs and update Chrome version
- ✅ Phase 2: Complete Manifest V3 migration with Service Worker
- ✅ Phase 3: Security improvements and dependency updates (jQuery 3.7.1)
- ✅ Phase 4: Comprehensive testing framework (Jest + Puppeteer)
- Update Puppeteer to latest version (24.35.0)
- Add automated unit and E2E tests
- Improve sandbox security with input validation
- Fix Audio API by forwarding to offscreen document
- Update all test checklists in upgrade plan

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,33 @@
-# compiled output
-/dist
-/tmp
-/out-tsc
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
 
-# dependencies
-/node_modules
+# Test coverage
+coverage/
+.nyc_output/
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Web store zip
-*.zip
-*.json
-
-# JS Beautify
-.jsbeautifyrc
-
-# for Mac
+# OS
 .DS_Store
+Thumbs.db
+
+# Build
+dist/
+build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test results
+test-results/
+screenshots/
